...
    
    func setBarCount() {
        if let count = Int(inputBarCount), count > 3, count <= 30 { // Set maximum limit
            barCount = count
            errorMessage = ""
        } else {
            errorMessage = "Bar count must be between 4 and 30."
        }
    }
    
    func setVolume() {
        if let progressPercentage = Int(inputProgress), progressPercentage >= 0 && progressPercentage <= 100 {
            sliderProgress = CGFloat(progressPercentage) / 100.0
...
